# UsefulTTA

./: README.md  pyproject.toml
2d-object-detection/libs/detectron2/: setup.py
2d-object-detection/libs/detectron2/configs/COCO-InstanceSegmentation/: mask_rcnn_R_50_FPN_3x.yaml
2d-object-detection/libs/detectron2/demo/: demo.py
2d-object-detection/libs/detectron2/detectron2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
2d-object-detection/libs/detectron2/detectron2/engine/: defaults.py
2d-object-detection/libs/detectron2/detectron2/model_zoo/: configs
