[project]
name = "usefultta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "cloudpickle>=3.1.1",
    "dataclasses>=0.8",
    "datasets>=3.6.0",
    "detectron2",
    "fvcore>=0.1.5.post20221221",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "packaging>=25.0",
    "psutil>=7.0.0",
    "scipy>=1.16.0",
    "shapely>=2.1.1",
    "tensorboard>=2.19.0",
    "termcolor>=3.1.0",
    "timm>=1.0.15",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "yacs>=0.1.8",
]

[tool.uv.sources]
detectron2 = { path = "2d-object-detection/libs/detectron2", editable = true }
